--- a/api-server/Gemfile
+++ b/api-server/Gemfile
@@ -45,5 +45,7 @@ group :development, :test do
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
 
-  gem 'dotenv-rails'
+  gem "dotenv-rails"
 end
+
+gem "ridgepole"
