--- a/api-server/Gemfile
+++ b/api-server/Gemfile
@@ -46,6 +46,10 @@ group :development, :test do
   gem "rubocop-rails-omakase", require: false
 
   gem "dotenv-rails"
+
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem "faker"
 end
 
 gem "ridgepole"
