--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,3 +37,21 @@ services:
       - ./.data:/data/engineer_business_matching_dev
       - ./.storage:/storage
     command: -scheme http -public-host ${URL:-localhost}:4443 -external-url http://${URL:-gcs}:4443 -port-http 8000
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    container_name: frontend
+    ports:
+      - 3000:3000
+      - 3001:3001
+      - 3002:3002
+      - 3100:3100
+      - 3102:3102
+    volumes:
+      - ./frontend:/app
+    restart: always
+    tty: true
+    stdin_open: true
+    command: "bash entrypoint.sh"
