APIのCIのLintの発火タイミングの調整

--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -2,6 +2,10 @@ name: API Lint
 
 on:
   pull_request:
+    paths:
+      - "api-server/**/*.{rb,rake}"
+      - "api-server/**/Gemfile"
+      - ".github/workflows/api-lint.yml"
 
 jobs:
   api-lint:
