E2E機構の追加

--- a/frontend/turbo.json
+++ b/frontend/turbo.json
@@ -16,6 +16,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "test:e2e": {
+      "dependsOn": ["^build"],
+      "passThroughEnv": ["PLAYWRIGHT_*"]
     }
   }
 }
