--- a/frontend/apps/talent/package.json
+++ b/frontend/apps/talent/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "dev:test": "NODE_ENV=test next dev --turbopack --port 3100",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/playwright-config": "workspace:*",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
