--- a/frontend/packages/eslint-config/package.json
+++ b/frontend/packages/eslint-config/package.json
@@ -17,6 +17,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-turbo": "^2.5.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-storybook": "^9.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.3.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.37.0"
