CI環境のRailsの環境変数を変更

--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Copy env file
         working-directory: api-server
-        run: cp .env.sample .env
+        run: cp .env.test .env
 
       # 必要なGemのインストール
       - name: Install dependencies
