--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,20 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "test:e2e": "turbo run test:e2e"
+    "test:e2e": "turbo run test:e2e",
+    "gen:api-spec": "turbo run gen:api-spec",
+    "gen:api-spec:watch": "turbo run gen:api-spec:watch",
+    "diff:api-spec:check": "turbo run diff:api-spec:check"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "@typespec/compiler": "latest",
+    "@typespec/http": "latest",
+    "@typespec/rest": "latest",
+    "@typespec/openapi": "latest",
+    "@typespec/openapi3": "latest",
+    "chokidar-cli": "^3.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.5",
