--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@typespec/openapi": "latest",
     "@typespec/openapi3": "latest",
     "chokidar-cli": "^3.0.0",
+    "js-yaml": "^4.1.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.5.5",
