--- a/api-server/.env.sample
+++ b/api-server/.env.sample
@@ -1,5 +1,11 @@
-DATABASE_NAME=engineer_business_matching
-DATABASE_USER=root
-DATABASE_PASS=root
-DATABASE_HOST=db
-DATABASE_PORT=3306
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASS=
+DATABASE_HOST=
+DATABASE_PORT=
+
+S3_REGION=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_BUCKET=
+S3_ENDPOINT=
