--- a/api-server/.env.test
+++ b/api-server/.env.test
@@ -3,3 +3,9 @@ DATABASE_USER=root
 DATABASE_PASS=root
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3306
+
+S3_REGION=ap-northeast-1
+S3_ACCESS_KEY=dummy
+S3_SECRET_KEY=dummy
+S3_BUCKET=engineer-business-matching-test
+S3_ENDPOINT=http://127.0.0.1:4566
