--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,20 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@typescript-eslint/parser": "^8.39.0",
     "@typespec/compiler": "latest",
     "@typespec/http": "latest",
-    "@typespec/rest": "latest",
     "@typespec/openapi": "latest",
     "@typespec/openapi3": "latest",
+    "@typespec/rest": "latest",
+    "autoprefixer": "^10.4.21",
     "chokidar-cli": "^3.0.0",
     "js-yaml": "^4.1.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
