packages/uiにTailwindの共通設定追加

--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./*": "./src/*.tsx",
+    "./tailwind.config": "./tailwind.config.ts",
+    "./styles.css": "./src/styles.css"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
