--- a/frontend/apps/talent/tsconfig.json
+++ b/frontend/apps/talent/tsconfig.json
@@ -5,7 +5,10 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts", "playwright.config.mjs"],
   "exclude": ["node_modules"]
