--- a/frontend/apps/talent/package.json
+++ b/frontend/apps/talent/package.json
@@ -13,7 +13,8 @@
     "test:e2e": "playwright test",
     "gen:api-spec": "cd api-spec && npx tsp compile . && node patch.mjs && cd ..",
     "gen:api-spec:watch": "SHELL=/usr/bin/sh chokidar 'api-spec/**/*.tsp' -c 'pnpm gen:api-spec'",
-    "diff:api-spec:check": "pnpm gen:api-spec && git add api-spec/tsp-output/schema/openapi.yaml && git diff --staged --quiet || (echo 'tspとyamlの変更が同期されていません' && exit 1)"
+    "diff:api-spec:check": "pnpm gen:api-spec && git add api-spec/tsp-output/schema/openapi.yaml && git diff --staged --quiet || (echo 'tspとyamlの変更が同期されていません' && exit 1)",
+    "gen:client": "orval --config orval.config.ts"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
@@ -26,6 +27,7 @@
     "@repo/typescript-config": "workspace:*",
     "@repo/playwright-config": "workspace:*",
     "@repo/api-spec": "workspace:*",
+    "@repo/orval-config": "workspace:*",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
