--- a/api-server/.env.test
+++ b/api-server/.env.test
@@ -9,3 +9,6 @@ S3_ACCESS_KEY=dummy
 S3_SECRET_KEY=dummy
 S3_BUCKET=engineer-business-matching-test
 S3_ENDPOINT=http://127.0.0.1:4566
+
+TALENT_CLIENT_ORIGIN=127.0.0.1:3100
+BUSINESS_CLIENT_ORIGIN=127.0.0.1:3101
