--- a/frontend/apps/business/tsconfig.json
+++ b/frontend/apps/business/tsconfig.json
@@ -10,6 +10,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts", "playwright.config.mjs"],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts", "playwright.config.mjs", "orval.config.mjs"],
   "exclude": ["node_modules"]
 }
