--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.84.2",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0"
   }
 }
