--- a/.github/workflows/api-test.yaml
+++ b/.github/workflows/api-test.yaml
@@ -4,7 +4,8 @@ on:
   pull_request:
     types: [opened, synchronize]
     paths:
-      - "api-server/**/*.{rb,rake}"
+      - "api-server/**/*.rb"
+      - "api-server/**/*.rake"
       - "api-server/**/Gemfile"
       - ".github/workflows/api-test.yml"
   push:
