--- a/.github/workflows/api-lint.yaml
+++ b/.github/workflows/api-lint.yaml
@@ -6,7 +6,7 @@ on:
       - "api-server/**/*.rb"
       - "api-server/**/*.rake"
       - "api-server/**/Gemfile"
-      - ".github/workflows/api-lint.yml"
+      - ".github/workflows/api-lint.yaml"
 
 jobs:
   api-lint:
