--- a/.github/workflows/api-test.yaml
+++ b/.github/workflows/api-test.yaml
@@ -7,7 +7,7 @@ on:
       - "api-server/**/*.rb"
       - "api-server/**/*.rake"
       - "api-server/**/Gemfile"
-      - ".github/workflows/api-test.yml"
+      - ".github/workflows/api-test.yaml"
   push:
     branches:
       - main
