--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -111,7 +111,7 @@ jobs:
         working-directory: ./frontend
 
       - name: Run Playwright tests
-        working-directory: ./frontend
+        working-directory: ./frontend/apps/talent
         run: pnpm test:e2e
 
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
