--- a/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
+++ b/frontend/apps/business/api-spec/tsp-output/schema/openapi.yaml
@@ -6,7 +6,7 @@ info:
 tags:
   - name: companies
   - name: csrf
-  - name: profiles
+  - name: profile
 paths:
   /companies/sign-in:
     post:
@@ -113,7 +113,7 @@ paths:
           description: Server error
       tags:
         - csrf
-  /profiles:
+  /profile:
     get:
       operationId: get-profile
       summary: Show Profile
@@ -130,7 +130,7 @@ paths:
         '500':
           description: Server error
       tags:
-        - profiles
+        - profile
       security:
         - BusinessBearerAuth: []
     put:
@@ -155,7 +155,7 @@ paths:
         '500':
           description: Server error
       tags:
-        - profiles
+        - profile
       requestBody:
         required: true
         content:
