--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Make Test Bucket on LocalStack
         run: |
           awslocal s3 mb s3://engineer-business-matching-test
-          aws --endpoint-url=http://127.0.0.1:4566 \
+          aws --endpoint-url=http://localhost:4566 \
             s3api put-bucket-cors \
             --no-sign-request \
             --bucket engineer-business-matching-test \
@@ -56,7 +56,7 @@ jobs:
                   {
                       "AllowedHeaders": ["*"],
                       "AllowedMethods": ["GET", "PUT", "POST"],
-                      "AllowedOrigins": ["http://localhost:3000", "http://localhost:3001"],
+                      "AllowedOrigins": ["http://localhost:3100", "http://localhost:3101"],
                       "ExposeHeaders": ["Access-Control-Allow-Origin", "Access-Control-Allow-Methods", "Access-Control-Allow-Headers"],
                       "MaxAgeSeconds": 3000
                   }
@@ -65,6 +65,8 @@ jobs:
 
       - name: Boot API Server
         working-directory: ./api-server
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
           rm -f tmp/pids/server.pid
           bundle exec rails s -e test -p 4100 -b '0.0.0.0' &
