--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0"
   }
